# minion-engine

./: .env  .env.example  .gitignore  ARCHITECTURE-MINION-ENGINE.md  ARCHITECTURE.md  Cargo.toml  Dockerfile.sandbox  EPICS-AND-STORIES.md  PROMPT.md  README.md  WORKTREE_COMPLETE.md  docker-compose.yml  evaluate.sh  features.md  litellm-config.yaml  package-lock.json  package.json  program.md  results.tsv  territory_map.json  tutorial.html
.github/workflows/: release.yml
.hive/: bmad-mapping.json  codebase-map.json  file-tree.txt  summary.md
Formula/: minion-engine.rb
_bmad-output/: project-context.md
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md
crates/minion-core/: Cargo.toml
crates/minion-core/src/: error.rs  event.rs  lib.rs  subscriber.rs  workflow.rs
crates/minion-core/tests/: contract.rs
crates/minion-harness/: Cargo.toml
crates/minion-harness/src/: engine.rs  executor.rs  lib.rs  workflow.rs
crates/minion-harness/tests/: concurrent_sessions.rs  step_resume.rs
crates/minion-sandbox-orchestrator/: Cargo.toml
crates/minion-sandbox-orchestrator/src/: docker.rs  lib.rs  local.rs  mock.rs  sandbox.rs
crates/minion-sandbox-orchestrator/tests/: lifecycle.rs
crates/minion-session/: Cargo.toml
crates/minion-session/migrations/: 20260413000001_init_sessions.sql
crates/minion-session/src/: lib.rs  session.rs  store.rs
crates/minion-session/tests/: integration.rs  types.rs
docs/: CONFIG.md  DOCKER-SANDBOX.md  EXAMPLES.md  REMOTE.md  STEP-TYPES.md  YAML-SPEC.md  architecture.md  component-inventory.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
examples/: README.md  java_sample.java  python_sample.py  rust_sample.rs  typescript_sample.ts
examples/examples/: README.md  main.rs  rust_sample.rs
examples/examples/tests/: mod.rs
prompts/: code-review.md.tera  fix-lint.md.tera  fix-tests.md.tera  implement-plan.md.tera  plan-implementation.md.tera  registry.yaml  security-audit.md.tera  weekly-report.md.tera
prompts/code-review/: _default.md.tera  java.md.tera  python.md.tera  react.md.tera  rust.md.tera  typescript.md.tera
prompts/fix-lint/: _default.md.tera  java-spring.md.tera  java.md.tera  python.md.tera  react.md.tera  rust.md.tera  typescript.md.tera
prompts/fix-test/: _default.md.tera  java-spring.md.tera  java.md.tera  python.md.tera  react.md.tera  rust.md.tera
src/: control_flow.rs  error.rs  lib.rs  main.rs
src/claude/: mod.rs  retry.rs  session.rs
src/cli/: commands.rs  display.rs  harness_adapter.rs  init_templates.rs  mod.rs  remote.rs  session_setup.rs  setup.rs
src/config/: defaults.rs  manager.rs  merge.rs  mod.rs
src/engine/: context.rs  mod.rs  state.rs  template.rs
src/events/: mod.rs  subscribers.rs  types.rs
src/plugins/: loader.rs  mod.rs  registry.rs
src/prompts/: detector.rs  mod.rs  registry.rs  resolver.rs
src/retry/: mod.rs
src/sandbox/: config.rs  docker.rs  mod.rs  proxy.rs
src/slack/: mod.rs
src/steps/: agent.rs  call.rs  chat.rs  cmd.rs  gate.rs  map.rs  mod.rs  parallel.rs  repeat.rs  retry.rs  script.rs  template_step.rs
src/workflow/: mod.rs  parser.rs  schema.rs  validator.rs
test-projects/python/: app.py  requirements.txt  test_app.py
test-projects/typescript/: package.json  tsconfig.json
test-projects/typescript/src/: task.test.ts  task.ts
tests/: cli_execute.rs  integration.rs  prompt_resolver.rs  test_examples.rs
tests/fixtures/: map_serial.yaml  mock_claude.sh  registry.yaml  registry_circular.yaml  registry_invalid.yaml  template_step.yaml
tests/fixtures/prompts/code-review/: _default.md.tera
tests/fixtures/prompts/fix-lint/: _default.md.tera  java.md.tera  rust.md.tera  typescript.md.tera
tests/fixtures/prompts/fix-test/: _default.md.tera
tests/integration/: retry_tests.rs
types/: index.ts  tsconfig.json
workflows/: code-review.yaml  fix-ci.yaml  fix-issue.yaml  fix-test.yaml  flaky-test-fix.yaml  generate-docs.yaml  hello-world-cmd.yaml  hello-world.yaml  refactor.yaml  security-audit.yaml  simple-test.yaml  weekly-report.yaml  whitebook-diagnosis.yaml  whitebook-query.yaml
