[package]
name = "minion-engine"
version = "0.1.0"
edition = "2021"
description = "AI workflow engine that orchestrates Claude Code CLI"
license = "MIT"

[[bin]]
name = "minion"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Template engine
tera = "1"

# HTTP client (for chat step)
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal display
colored = "2"
indicatif = "0.17"

# Utilities
regex = "1"
chrono = "0.4"
async-trait = "0.1"
futures = "0.3"
dirs = "5"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
