[workspace]
members = [
    ".",
    "crates/minion-core",
    "crates/minion-session",
    "crates/minion-sandbox-orchestrator",
]

[package]
name = "minion-engine"
version = "0.7.6"
edition = "2021"
description = "AI workflow engine that orchestrates Claude Code CLI — automate code review, refactoring, and PR creation with YAML workflows"
license = "MIT"
repository = "https://github.com/allanbrunobr/minion-engine"
homepage = "https://github.com/allanbrunobr/minion-engine"
documentation = "https://github.com/allanbrunobr/minion-engine#readme"
keywords = ["ai", "workflow", "claude", "automation", "cli"]
categories = ["command-line-utilities", "development-tools", "asynchronous"]
readme = "README.md"
authors = ["Allan Bruno"]
exclude = [
  "/Formula/",
  "/.github/",
  "PROMPT.md",
  "EPICS-AND-STORIES.md",
  "ARCHITECTURE-MINION-ENGINE.md",
  "territory_map.json",
]

[[bin]]
name = "minion"
path = "src/main.rs"

[features]
default = []
slack = ["axum", "hmac", "sha2", "hex"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
toml = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Template engine
tera = "1"

# HTTP client (for events/subscribers and fallback)
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

# LLM provider abstraction (18+ providers: Anthropic, OpenAI, Ollama, Google, etc.)
rig-core = "0.32"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal display
colored = "2"
indicatif = "0.17"

# Utilities
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5"] }
async-trait = "0.1"
futures = "0.3"
dirs = "5"
rhai = "1"

# Dynamic plugin loading
libloading = "0.8"

# Stable contract types (Epic 2 Story 2.1)
minion-core = { path = "crates/minion-core" }

# Session persistence (Epic 1 Story 1.4)
minion-session = { path = "crates/minion-session" }
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }

# Slack Bot (optional — enable with --features slack)
axum = { version = "0.8.8", features = ["json"], optional = true }
hmac = { version = "0.12.1", optional = true }
sha2 = { version = "0.10.9", optional = true }
hex = { version = "0.4.3", optional = true }

[profile.release]
strip = true
opt-level = "z"
lto = "thin"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
