[package]
name = "minion-sandbox-orchestrator"
version = "0.1.0"
edition = "2021"
description = "Sandbox lifecycle abstractions for the Minion Engine v2 — Docker + mock impls"
license = "MIT"
authors = ["Allan Bruno"]

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
