[package]
name = "minion-session"
version = "0.1.0"
edition = "2021"
description = "Append-only session log primitive for the Minion Engine v2 harness"
license = "MIT"
authors = ["Allan Bruno"]

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
